--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "pg": "^8.14.0",
-    "sequelize": "^6.37.6"
+    "sequelize": "^6.37.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
